src/test/ui/parser/increment-notfixed.stderr
error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:11:16
   |
LL |     foo.bar.qux++;
   |                ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = foo.bar.qux; foo.bar.qux += 1; tmp };
   |     +++++++++++            ~~~~~~~~~~~~~~~~~~~~~~~~~
LL -     foo.bar.qux++;
LL +     foo.bar.qux += 1;
   | 

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:21:10
   |
LL |     s.tmp++;
   |          ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = s.tmp; s.tmp += 1; tmp };
   |     +++++++++++      ~~~~~~~~~~~~~~~~~~~
LL -     s.tmp++;
LL +     s.tmp += 1;
   | 

error: Rust has no prefix increment operator
  --> $DIR/increment-notfixed.rs:28:5
   |
LL |     ++foo.bar.qux;
   |     ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     ++foo.bar.qux;
LL +     foo.bar.qux += 1;
   | 

error: aborting due to 3 previous errors

